--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
+body{
+  margin: 0 auto;
+  padding: 0 auto;
+}
+.logo{
+  width: 50px;
+  height: 50px;
+  display: inline;
+  float: left;
+}
+.navbar{
+  height: 70px;
+  padding-top: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
+  background-color: rgb(236, 230, 205);
+}
+.nav{
+  display: inline;
+
+}
+.nav li{
+  list-style-type: none;
+  padding-top: 10px;
+  padding-right: 10px;
+  float: right;
+}
+.nav li a{
+  text-decoration: none;
+  color: black;
+}
+.nav li a:hover{
+  color: rgb(9, 88, 62);
+}
+.courses{
   text-align: center;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 10px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.courses h3{
+  margin-top: 10px;
+  text-transform:uppercase;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.single-course{
+  width: 300px;
+  /* height: 300px; */
+  background-color:rgb(236, 230, 205);
+  display: inline-block;
+  margin-left: 10px;
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  
 }
+.single-course:hover{
+  box-shadow: 10px 10px 10px 10px transparent;
+  transition: -3s;
+  border-radius: 10px;
+  background-color: rgb(172, 235, 228);
+  cursor: pointer;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.course-icon{
+  width: 50px;
+  height: 50px;
+  /* display: inline; */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer{
+  height: 70px;
+  padding-top: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
+  background-color: rgb(236, 230, 205);
+  margin-top: 100px;
+}
+.footer h4{ display: inline;
+float: left;}
+.footer img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: inline;
+  float: right;
 }
